bk_ida/gccida/c3/alloc_expansion_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cppmacro.c:1743:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 * alloc_expansion_token( cpp_reader_0 *pfile, cpp_macro_0 *macro) 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cppmacro.c:1743:38: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_token_0 * alloc_expansion_token( cpp_reader_0 *pfile, cpp_macro_0 *macro) 
                                     ^~~~~~~~~~~~
                                     cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cppmacro.c:1743:59: error: unknown type name 'cpp_macro_0'; did you mean 'cpp_macro'?
cpp_token_0 * alloc_expansion_token( cpp_reader_0 *pfile, cpp_macro_0 *macro) 
                                                          ^~~~~~~~~~~
                                                          cpp_macro
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cpplib.h:43:26: note: 'cpp_macro' declared here
typedef struct cpp_macro cpp_macro;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cppmacro.c:1753:23: error: expected expression
return ( cpp_token_0 *)&cur[24 * count]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/cppmacro.c:1753:10: error: use of undeclared identifier 'cpp_token_0'
return ( cpp_token_0 *)&cur[24 * count]; 
         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_expansion_token/src/obj/cppmacro.o] Error 1
